# tools

./: .gitignore
facecropper/: CMakeLists.txt
facecropper/include/: common.h  facefinder.h  image.hpp  imagesaver.h
facecropper/src/: facefinder.cpp  main.cpp
labeler/: CMakeLists.txt
labeler/src/: main.cpp
random_image_selector/: CMakeLists.txt
random_image_selector/src/: main.cpp
tvrecorder/: CMakeLists.txt
tvrecorder/include/: facefinder.h  image.hpp
tvrecorder/src/: facefinder.cpp  imagesaver.cpp  main.cpp
